# FisioNet

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/appointment_service/: Cargo.toml
backend/appointment_service/migrations/: 001_create_appointments.sql  001_create_appointments_table.sql
backend/appointment_service/src/: main.rs
backend/appointment_service/src/config/: mod.rs
backend/appointment_service/src/database/: mod.rs
backend/appointment_service/src/handlers/: mod.rs
backend/appointment_service/src/models/: appointment.rs  mod.rs
backend/appointment_service/src/utils/: mod.rs
backend/auth_service/: Cargo.toml
backend/auth_service/migrations/: 006_insert_test_users.sql  007_add_on_delete_cascade_to_appointments.sql  008_create_forum_tables.sql
backend/auth_service/src/: main.rs
backend/auth_service/src/config/: mod.rs
backend/auth_service/src/database/: mod.rs
backend/auth_service/src/handlers/: admin.rs  auth.rs  mod.rs  users.rs
backend/auth_service/src/models/: user.rs
backend/auth_service/src/utils/: jwt.rs  password.rs
backend/chat_notification_service/: Cargo.toml
backend/chat_notification_service/src/: handlers.rs  main.rs  models.rs  state.rs
backend/exercise_service/: Cargo.toml
backend/exercise_service/migrations/: 001_create_exercise_images.sql  001_seed_exercises.sql
backend/exercise_service/src/: main.rs
backend/exercise_service/src/config/: mod.rs
backend/exercise_service/src/database/: mod.rs
backend/exercise_service/src/handlers/: mod.rs
backend/exercise_service/src/models/: mod.rs
backend/forum_service/: Cargo.toml
backend/forum_service/migrations/: 001_create_users_table.sql  002_add_profile_image.sql  003_placeholder.sql  004_add_physiotherapist_fields.sql  005_create_appointments_table.sql  006_insert_test_users.sql  008_convert_author_id_to_text.sql  008_create_users_view.sql
backend/forum_service/src/: main.rs
backend/forum_service/src/config/: mod.rs
backend/forum_service/src/database/: mod.rs
backend/forum_service/src/handlers/: mod.rs
backend/forum_service/src/models/: mod.rs
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ImageCarousel.tsx  ProtectedRoute.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx  UnreadMessagesContext.tsx
frontend/src/pages/: AdminPanelPage.tsx  AppointmentBookingPage.tsx  AppointmentsPage.tsx  ChatPage.tsx  ExerciseDetailPage.tsx  ExercisesPage.tsx  ForumPage.tsx  HomePage.tsx  LoginPage.tsx  PatientsPage.tsx  PhysiotherapistDetailPage.tsx  PhysiotherapistSchedulePage.tsx  PhysiotherapistsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  UserProfilePage.tsx
frontend/src/services/: adminService.ts  appointmentService.ts  authService.ts  chatService.ts  exerciseService.ts  forumService.ts  profileService.ts  usersService.ts
frontend/src/types/: index.ts
scripts/: run-auth-service.bat  setup-vs-env.bat
