[workspace]
resolver = "2"

members = [
    "auth_service",
    "exercise_service", 
    "appointment_service",
    "forum_service",
    "chat_notification_service",
]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.14"
jsonwebtoken = "8.3"
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = "2.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
