[package]
name = "chat_notification_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
futures = "0.3"
tokio-stream = "0.1"
