[package]
name = "exercise_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
sanitize-filename = "0.5"
